src/migration/sea_orm/user/snapshots/roadster__migration__user__m20241022_072216_case_insensitive_username_email__tests__up_statements@case_2.snap
---
source: src/migration/user/m20241022_072216_case_insensitive_username_email.rs
expression: query
---
[
    Statement {
        sql: "ALTER table \"user\" ALTER COLUMN \"username\" type varchar COLLATE case_insensitive",
        values: None,
        db_backend: MySql,
    },
    Statement {
        sql: "ALTER table \"user\" ALTER COLUMN \"email\" type varchar COLLATE case_insensitive",
        values: None,
        db_backend: MySql,
    },
]
